--- a/app/scss/colors.scss
+++ b/app/scss/colors.scss
@@ -12,4 +12,8 @@
     --color-bglight: #f9fafb;
     --color-bggray: #f6f7f8;
     --color-socialbg: #f2f4f7;
+    --color-bread: #bbb;
+    --color-bread-span: #888;
+    --color-black: #333333;
+    --color-full: #000;
 }
