--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,7 +6,7 @@ body{
     max-width: 1920px;
     background: var(--color-white);
     margin: 0 auto;
-    font-family: "Manrope", sans-serif;
+    font-family: 'Manrope',Arial,sans-serif;
 }
 
 .container{
