--- a/app/scss/construct.scss
+++ b/app/scss/construct.scss
@@ -542,7 +542,7 @@
             .world__body-popular {
                 display: flex;
                 flex-direction: column;
-                gap: 16px;
+                gap: 24px;
 
                 h4:has(svg) {
                     cursor: pointer;
@@ -553,6 +553,53 @@
                     align-items: center;
                     color: var(--color-primary-textnav);
                     font-size: 16px;
+
+                    svg {
+                        transition: all 0.5s ease;
+
+                        &.rotate-180 {
+                            rotate: 180deg;
+                        }
+                    }
+                }
+
+                .search-wrap {
+                    padding: 8px 12px;
+                    border: 1px solid var(--color-black);
+                    border-radius: 6px;
+                    display: flex;
+                    align-items: center;
+                    gap: 8px;
+                    position: relative;
+                    max-width: max-content;
+                    min-width: 400px;
+                    label {
+                        width: 32px;
+                        min-width: 32px;
+                        aspect-ratio: 1/1;
+                        background: var(--color-pale);
+                        border-radius: 6px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                        svg {
+                            color: var(--color-actient);
+                            width: 20px;
+                            height: 18px;
+                        }
+                    }
+
+                    input::placeholder {
+                        color: #33333350;
+                    }
+
+                    input {
+                        background: transparent;
+                        height: auto;
+                        width: 100%;
+                        color: var(--color-black);
+                    }
                 }
 
                 .popular-wrap {
@@ -561,23 +608,20 @@
                     gap: 24px;
 
                     .country-item {
-                        padding: 12px;
-                        background: var(--color-bglight);
-                        border: 1px solid var(--color-border);
-                        border-radius: 5px;
                         display: flex;
                         align-items: center;
                         gap: 12px;
                         transition: all 0.3s ease;
                         font-weight: 400;
+                        font-size: 16px;
 
                         &:hover {
                             color: var(--color-actient);
                         }
 
                         span {
-                            width: 32px;
-                            min-width: 32px;
+                            width: 34px;
+                            min-width: 34px;
                             aspect-ratio: 1/1;
                             border-radius: 50%;
                             background-size: cover;
@@ -606,7 +650,7 @@
             display: flex;
             flex-direction: column;
             gap: 32px;
-            background: var(--color-bglight);
+            background: var(--color-black);
             border-radius: 20px;
             border: 1px solid var(--color-border);
 
@@ -616,11 +660,14 @@
                 gap: 12px;
 
                 h3 {
-                    font-size: 32px;
+                    font-size: 40px;
+                    color: var(--color-white);
                 }
 
                 p {
                     font-weight: 400;
+                    color: var(--color-white);
+                    font-size: 18px;
                 }
             }
 
@@ -635,7 +682,7 @@
 
                 .input-wrap {
                     padding: 12px;
-                    border: 1px solid #66708560;
+                    border: 1px solid var(--color-white);
                     border-radius: 6px;
                     display: flex;
                     align-items: center;
@@ -643,9 +690,15 @@
                     position: relative;
                     width: 100%;
                     grid-column: span 1;
-                    .iti{
+
+                    .iti {
                         width: 100%;
+
+                        .iti__globe .iti__globe-svg {
+                            fill: #ffffff50;
+                        }
                     }
+
                     label {
                         width: 32px;
                         min-width: 32px;
@@ -664,24 +717,34 @@
                     }
 
                     input::placeholder {
-                        color: #66708560;
+                        color: #ffffff50;
                     }
 
                     input {
                         background: transparent;
                         height: auto;
                         width: 90%;
-                        color: var(--color-primary);
+                        color: var(--color-white);
                     }
                 }
 
-                button {
+                .button {
                     max-width: none;
+                    background: var(--color-actient);
+                    color: var(--color-white);
+
+                    &:hover {
+                        background: transparent;
+                    }
 
                     .button-wrap {
                         justify-content: center;
                     }
                 }
+            }
+
+            p.small-text {
+                color: #b8b8b8;
             }
         }
     }
