--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -13,7 +13,9 @@
     &__body {
         display: flex;
         flex-direction: column;
-
+        .header__body-mobile-nav{
+            display: none;
+        }
         &-top {
             padding: 6px 0;
             display: flex;
@@ -22,7 +24,9 @@
             width: 100%;
             border-bottom: 1px solid var(--color-border);
 
-
+            .burger{
+                display: none;
+            }
             .action {
                 display: flex;
                 align-items: center;
@@ -66,7 +70,7 @@
                 .switcher{
                     position: relative;
                     &__main{
-                        padding: 8px 16px;
+                        padding: 12px 16px;
                         display: flex;
                         align-items: center;
                         gap: 6px;
@@ -74,6 +78,7 @@
                         border-radius: 50px;
                         color: var(--color-primary-textnav);
                         cursor: pointer;
+                        font-weight: 400;
                         svg{
                             width: 14px;
                             height: 14px;
