--- a/app/scss/text.scss
+++ b/app/scss/text.scss
@@ -25,5 +25,5 @@
     font-size: 40px;
     line-height: 120%;
     font-weight: 600;
-    color: var(--color-primary);
+    color: var(--color-black);
 }
